// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LocationInput renders correctly 1`] = `
<div>
  <div
    class="columns m-4 mx-6"
  >
    <div
      class="field column is-one-quarter"
    >
      <label
        class="label"
      >
        input.zipLabel
      </label>
      <div
        class="control"
      >
        <input
          class="input"
          placeholder="input.zipLabel"
          type="text"
          value=""
        />
      </div>
    </div>
    <div
      class="field column is-one-quarter"
    >
      <label
        class="label"
      >
        input.localeLabel
      </label>
      <div
        class="control"
      >
        <input
          class="input"
          placeholder="input.localeLabel"
          type="text"
          value=""
        />
      </div>
    </div>
    <div
      class="field column is-one-quarter"
    >
      <label
        class="label"
      >
        input.unitsLabel
      </label>
      <div
        class="control"
      >
        <div
          class="select"
        >
          <select>
            <option>
              input.select.standard
            </option>
            <option>
              input.select.metric
            </option>
            <option>
              input.select.imperial
            </option>
          </select>
        </div>
      </div>
    </div>
  </div>
  <button
    class="button is-medium is-success ml-6 mb-6"
    disabled=""
  >
    input.button
  </button>
</div>
`;

exports[`LocationInput updates selected units 1`] = `
<option>
  input.select.metric
</option>
`;

exports[`LocationInput updates zip and locale 1`] = `
<input
  class="input"
  placeholder="input.zipLabel"
  type="text"
  value=""
/>
`;

exports[`LocationInput updates zip and locale 2`] = `
<input
  class="input"
  placeholder="input.localeLabel"
  type="text"
  value=""
/>
`;
